# factopt

./: .gitignore  README.md  factorio_blueprint_optimizer_plan.md  geodedi.py  pyproject.toml
blueprints/: green-circuits-15ps.txt  green-circuits-30ps.txt  green-circuits-5ps.txt  green-science-1ps.txt
blueprints/benders/: green-science-1ps.blueprint.txt  green-science-1ps.report.md
blueprints/best/: blue-science-circuit-input.blueprint.txt  blue-science-circuit-input.report.md  blue-science-steiner-1ps-rev.report.md  blue-science-test.blueprint.txt  blue-science-test.report.md  green-science-circuit-input.blueprint.txt  green-science-circuit-input.report.md  green-science-steiner-1ps-rev.report.md  green_circuits-60ps.blueprint.txt  purple-science-circuit-input.blueprint.txt  purple-science-circuit-input.report.md  red-circuits.blueprint.txt  red-circuits.report.md
blueprints/dense/: blue-science-steiner-1ps-rev.blueprint.txt  green-science-controller.blueprint.txt  green-science-controller.report.md  green-science-dense-1ps.blueprint.txt  green-science-dense-1ps.report.md  green-science-new-routing.report.md  (+25 more)
docs/: architecture.md  optimization-model.md
scripts/: backend_bench.py  steiner_run.py
tests/: test_band.py  test_belt.py  test_codec.py  test_dense.py  test_direct.py  test_endtoend.py  test_evaluate.py  test_flow.py  test_loop.py  test_macros.py  test_master.py  test_master_backend.py  test_multinet.py  test_mvp.py  test_optimize.py  test_ordering.py  test_placement.py  test_ratios.py  test_reversible.py  test_routing.py  test_sim.py  test_steiner.py
(+50 files in other folders)
