[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factopt"
version = "0.0.1"
description = "An optimizer for Factorio blueprints (vanilla 2.0, belt-based blocks)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pulp>=2.8",
    "ortools>=9.10",
    "pyscipopt>=5.0",
    "networkx>=3.2",
    "factorio-draftsman>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/factopt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: slow-running tests (deselect with '-m \"not slow\"')"]
